--- a/automations/ground_floor/living_room/harmony_start_activity_gtst.yaml
+++ b/automations/ground_floor/living_room/harmony_start_activity_gtst.yaml
@@ -18,7 +18,7 @@
       state     : 'off'
   action:
     - service   : switch.turn_on
-      entity_id : switch.powerplug_2_relay
+      entity_id : switch.living_room_entertainment_outlet_relay
     - delay     : '00:00:10'
     - service   : remote.turn_on
       entity_id : remote.roelofs_harmony_hub
