--- a/lovelace/home.yaml
+++ b/lovelace/home.yaml
@@ -79,7 +79,7 @@ cards:
         head       : light.hallway_lights
         entities:
           - light.hallway_light
-          - light.toilet_light
+          - light.restroom_light
           - timer.restroom_light_timeout
 
 
@@ -157,11 +157,11 @@ cards:
     title : Switches
     show_header_toggle: false
     entities:
-      - switch.powerplug_2_relay
+      - switch.living_room_entertainment_outlet_relay
       - switch.staircase_closet_floorheatingpump_outlet
-      - switch.powerplug_1_relay
+      - switch.living_room_charging_station_outlet_relay
 #      - switch.xiaomi_switch_2 Christmas tree
-      - switch.doorbell_v3_chime_active
+      - switch.utility_closet_doorbell_chime_active
       - switch.wake_up_vaste_pc
       - remote.roelofs_harmony_hub
 
@@ -265,47 +265,6 @@ cards:
 
       - type  : media-control
         entity: media_player.slaapkamer
-    
-  - type : custom:vertical-stack-in-card
-    title: "Coronavirus Tracker \U0001F9A0"
-    cards:
-      - type  : glance
-        title : "Wereldwijd \U0001F30D"
-        show_icon : true
-        show_name : true
-        show_state: true
-        entities:
-          - entity: sensor.worldwide_coronavirus_confirmed
-            icon  : 'mdi:emoticon-neutral-outline'
-            name  : Bevestigd
-          - entity: sensor.worldwide_coronavirus_current
-            icon  : 'mdi:emoticon-frown-outline'
-            name  : Huidig
-          - entity: sensor.worldwide_coronavirus_recovered
-            icon  : 'mdi:emoticon-happy-outline'
-            name  : Hersteld
-          - entity: sensor.worldwide_coronavirus_deaths
-            icon  : 'mdi:emoticon-dead-outline'
-            name  : Dood
-    
-      - type  : glance
-        title : "Nederland \U0001F1F3\U0001F1F1"
-        show_icon : true
-        show_name : true
-        show_state: true
-        entities:
-          - entity: sensor.netherlands_coronavirus_confirmed
-            icon  : 'mdi:emoticon-neutral-outline'
-            name  : "Bevestigd"
-          - entity: sensor.netherlands_coronavirus_current
-            icon  : 'mdi:emoticon-frown-outline'
-            name  : "Huidig"
-          - entity: sensor.netherlands_coronavirus_recovered
-            icon  : 'mdi:emoticon-happy-outline'
-            name  : "Hersteld"
-          - entity: sensor.netherlands_coronavirus_deaths
-            icon  : 'mdi:emoticon-dead-outline'
-            name  : "Dood"
 
   - type : custom:vertical-stack-in-card
     title: "Quarantine-o-meter"
