--- a/automations/ground_floor/dining_area/wallswitch_ceiling.yaml
+++ b/automations/ground_floor/dining_area/wallswitch_ceiling.yaml
@@ -14,5 +14,9 @@
       entity_id : sensor.home_assistant_uptime
       above     : 2
   action:
-    - service   : light.toggle
-      entity_id : light.dining_area_ceiling_group
+    - service      : light.toggle
+      data_template:
+        entity_id     : light.dining_area_ceiling_group
+        kelvin        : "{{ state_attr('sensor.circadian_values', 'colortemp') | int }}"
+        brightness_pct: "{{ state_attr('switch.circadian_lighting_ground_floor', 'brightness') | int }}"
+        transition    : 1
