--- a/automations/first_floor/landing/wallswitch_light_ceiling_day.yaml
+++ b/automations/first_floor/landing/wallswitch_light_ceiling_day.yaml
@@ -1,5 +1,5 @@
 - alias            : first_floor_landing_wallswitch_light_ceiling_day
-  id               : 21a10a9c-c9ab-412a-a300-5ee717bae26c
+  id               : ae3036b8-0ccf-43e9-ad8c-8bf5be20f251
   trigger:
     - platform     : state
       entity_id    : binary_sensor.first_floor_landing_switch
@@ -10,21 +10,13 @@
       from         : 'on'
       to           : 'off'
   condition:
-    - condition    : numeric_state
-      entity_id    : sensor.first_floor_landing_motionsensor_illuminance
-      below        : 35            # Lux
-    - condition    : or
-      conditions:
-        - condition: state
-          entity_id: binary_sensor.morning
-          state    : 'on'
-        - condition: state
-          entity_id: binary_sensor.afternoon
-          state    : 'on'
+    - condition    : state
+      entity_id    : binary_sensor.night
+      state        : 'off'
   action:
     - service      : light.toggle
-      data:
-        entity_id  : light.first_floor_landing_ceiling
-        brightness : 255            # Integer between 0 and 255
-        color_temp : 200            # in mireds. 153=white, 500=yellow
-        transition : 2
+      data_template:
+        entity_id     : light.first_floor_landing_ceiling
+        kelvin        : "{{ state_attr('sensor.circadian_values', 'colortemp') | int }}"
+        brightness_pct: "{{ state_attr('switch.circadian_lighting_landings', 'brightness') | int }}"
+        transition    : 2
