Prevent automations firing on HA boot (switching from unavailable state)

--- a/automations/first_floor/bedroom_master/wardrobe/door_closed.yaml
+++ b/automations/first_floor/bedroom_master/wardrobe/door_closed.yaml
@@ -3,6 +3,7 @@
   trigger:
     - platform              : state   # Turn off lights 4 seconds after closing doors
       entity_id             : binary_sensor.bedroom_master_wardrobe_doorsensor
+      from                  : 'on'
       to                    : 'off'
       for                   : "00:00:04"
     - platform              : state   # Turn off lights if they are on for 5 minutes
