--- a/automations/ground_floor/kitchen/window_closes_light_off.yaml
+++ b/automations/ground_floor/kitchen/window_closes_light_off.yaml
@@ -3,6 +3,7 @@
   trigger:
     - platform  : state
       entity_id : binary_sensor.kitchen_windowsensor
+      from      : 'on'
       to        : 'off' # Window closes
   condition:
     - condition : state
