--- a/automations/ground_floor/kitchen/window_opens_light_on.yaml
+++ b/automations/ground_floor/kitchen/window_opens_light_on.yaml
@@ -3,6 +3,7 @@
   trigger:
     - platform  : state
       entity_id : binary_sensor.kitchen_windowsensor
+      from      : 'off'
       to        : 'on' # Window opens
   condition:
     - condition : state
