--- a/automations/ground_floor/living_room/backdoor_closes_light_off.yaml
+++ b/automations/ground_floor/living_room/backdoor_closes_light_off.yaml
@@ -3,6 +3,7 @@
   trigger:
     - platform  : state
       entity_id : binary_sensor.living_room_doorsensor
+      from      : 'on'
       to        : 'off' # Window closes
   condition:
     - condition : state
