--- a/automations/second_floor/landing/motion/ceiling_on_night.yaml
+++ b/automations/second_floor/landing/motion/ceiling_on_night.yaml
@@ -2,11 +2,10 @@
   id               : 36258000-10e2-4af8-b280-aff94110ec60
   trigger:
     - platform     : state
-      entity_id    : binary_sensor.second_floor_landing_motionsensor_occupancy
+      entity_id:
+        - binary_sensor.second_floor_landing_motionsensor_zone
+        - light.second_floor_landing_ceiling      # Needed because its possible to start the light by hand without motion sensor detecting motion.
       to           : 'on'
-    - platform     : state
-      entity_id    : light.second_floor_landing_ceiling
-      to           : 'on'            # Needed because its possible to start the light by hand without motion sensor detecting motion.
   condition:
     - condition    : state
       entity_id    : binary_sensor.night
