data_template no longer necessary (as of release 0.115)

--- a/automations/first_floor/bathroom/climate/schedule_weekday_turn_high.yaml
+++ b/automations/first_floor/bathroom/climate/schedule_weekday_turn_high.yaml
@@ -12,6 +12,6 @@
       state        : 'on'
   action:
     - service      : climate.set_temperature
-      data_template:
+      data:
         entity_id  : climate.bathroom
         temperature: "{{ states('input_number.bathroom_target_temp_high') | int }}"
