--- a/automations/first_floor/bathroom/climate/schedule_weekend_turn_low.yaml
+++ b/automations/first_floor/bathroom/climate/schedule_weekend_turn_low.yaml
@@ -9,6 +9,6 @@
       state        : 'off'
   action:
     - service      : climate.set_temperature
-      data_template:
+      data:
         entity_id  : climate.bathroom
         temperature: "{{ states('input_number.bathroom_target_temp_low') | int }}"
