--- a/automations/first_floor/bathroom/climate/setpoint_converter_window_closed.yaml
+++ b/automations/first_floor/bathroom/climate/setpoint_converter_window_closed.yaml
@@ -9,6 +9,6 @@
 #      state     : 'off' # closed
 #  action:
 #    - service   : mqtt.publish
-#      data_template:
+#      data:
 #        topic   : zigbee2mqtt/Thermostat_Bathroom/set
 #        payload : '{"current_heating_setpoint": {{trigger.payload}}}'
