--- a/automations/system/backup.yaml
+++ b/automations/system/backup.yaml
@@ -15,7 +15,7 @@
         - sun
   action:
     - service   : hassio.snapshot_full
-      data_template:
+      data:
         name    : Backup {{ now().strftime('%Y-%m-%d') }} (HA v.{{ states('sensor.version_current') }})
 #    - delay:
 #        minutes : 45 # Delay of 45 minutes
