--- a/automations/first_floor/bathroom/climate/schedule_evening_turn_low.yaml
+++ b/automations/first_floor/bathroom/climate/schedule_evening_turn_low.yaml
@@ -5,6 +5,6 @@
       at           : "22:30:00"
   action:
     - service      : climate.set_temperature
-      data_template:
+      data:
         entity_id  : climate.bathroom
         temperature: "{{ states('input_number.bathroom_target_temp_low') | int }}"
