--- a/integrations/logger.yaml
+++ b/integrations/logger.yaml
@@ -8,7 +8,7 @@ logger:
     homeassistant.components.plex.media_player : info
     custom_components.experiaboxv10.device_tracker : error
 #    homeassistant.components.withings          : error
-    homeassistant.components.life360           : debug     # To show circles (zones) information during boot
+#    homeassistant.components.life360           : debug     # To show circles (zones) information during boot
 
     # Debug info about ZHA (usefull for firmware updates)
 #    homeassistant.components.zha               : debug
