--- a/automations/ground_floor/living_room/sunset_lights_on.yaml
+++ b/automations/ground_floor/living_room/sunset_lights_on.yaml
@@ -6,7 +6,7 @@
   trigger:
     - platform  : numeric_state
       entity_id : sun.sun
-      value_template: "{{ state.attributes.elevation }}"
+      attribute : elevation
       below     : 3.0 # Can be a positive or negative number
   condition:
     - condition : state
