--- a/entities/input_numbers/climate_setpoints.yaml
+++ b/entities/input_numbers/climate_setpoints.yaml
@@ -1,5 +1,14 @@
 bathroom_target_temp:
-  name                : Bathroom Target Temperature
+  name                : Badkamer Temperatuur
+  min                 : 15
+  max                 : 30
+  step                : 0.5
+  unit_of_measurement : °C
+  icon                : mdi:target
+  mode                : slider
+
+bedroom_master_target_temp:
+  name                : Slaapkamer Temperatuur
   min                 : 15
   max                 : 30
   step                : 0.5
